<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="projet.istic.fr.firedrone.LoginActivityTest"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:src="@drawable/drone"
                android:contentDescription="@string/logodescription" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_hint"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textView6"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint=""
                    android:ems="10"
                    android:id="@+id/loginField"
                    android:layout_below="@+id/textView6"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_hint"
                    android:layout_below="@+id/loginField"
                    android:id="@+id/textView7"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passField"
                    android:layout_below="@+id/textView7"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/validateLoginButton"
                    android:id="@+id/loginButton"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/passField"
                    android:layout_marginTop="80dp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
