<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:title="@string/utilisateur"
        android:id="@+id/group_4"
        >
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="Deconnexion"

                />

        </menu>
    </group>

</menu>