<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <FrameLayout
            android:id="@+id/interventionMapAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/interventionList">

        </FrameLayout>


    <ListView
        android:id="@+id/interventionList"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#fff"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_above="@+id/btnAddIntervention" />


    <Button android:id="@+id/btnAddIntervention" style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/add_intervention"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>